--- a/static/css/meanmenu.css
+++ b/static/css/meanmenu.css
@@ -1,4 +1,3 @@
-/*--------------------------------------------------------------------- File Name: meanmenu.css ---------------------------------------------------------------------*/
 
 a.meanmenu-reveal {
      display: none;
@@ -113,7 +112,7 @@ a.meanmenu-reveal {
 }
 
 .mean-container .mean-nav ul li a:hover {
-     ` background: #252525;
+      background: #252525;
      background: rgba(255, 255, 255, 0.1);
 }
 
