--- a/tem/component/base.html
+++ b/tem/component/base.html
@@ -13,12 +13,15 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/hero.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/product.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/login_register.css' %}">
-    <title>Document</title>
+    <title>Amin Crockeries</title>
 </head>
 
 
 <body style="background-color: #F5F5F5;">
 {%include 'component/navbar.html' %}
+{%include 'component/message.html' %}
+
+
 
 {% block hero %}
 
