--- a/tem/component/products.html
+++ b/tem/component/products.html
@@ -3,33 +3,59 @@
 
         {% for product in products %}
 
-        <div class="col-md-3 mb-3">
-            <div class="card">
+            <div class="col-md-3 mb-3">
+                <div class="card">
 
-                <a href="{{ product.get_absolute_url }}"> <img src="{{ product.img.url }}"
-                                                               class="card-img-top product_img"
-                                                               alt="Product 1"></a>
-                <div class="card-body">
-                    <h5 class="card-title" style="height: 25px;overflow: hidden">{{ product.name }}</h5>
-                    <h5 class="card-text">{{ product.unit_price }} <strong>৳</strong></h5>
+                    <a href="{{ product.get_absolute_url }}"> <img src="{{ product.img.url }}"
+                                                                   class="card-img-top product_img"
+                                                                   alt="Product 1"></a>
+                    <div class="card-body">
+                        <h5 class="card-title" style="height: 25px;overflow: hidden">{{ product.name }}</h5>
+                        <h5 class="card-text">{{ product.unit_price }} <strong>৳</strong></h5>
 
-                    <i class=" bi bi-star"></i>
-                    <i class=" bi bi-star"></i>
-                    <i class=" bi bi-star"></i>
-                    <i class=" bi bi-star"></i>
+                        <i class=" bi bi-star"></i>
+                        <i class=" bi bi-star"></i>
+                        <i class=" bi bi-star"></i>
+                        <i class=" bi bi-star"></i>
 
-                    <span class="btn" style="float:right;">
+                        <span class="btn" style="float:right;">
                     <a href="{% url 'addToWishList' product.id %}" class="btn"><i class="bi bi-heart"></i> Fav</a>
 
                     <a href="{% url 'addToCart' product.id %}" class="btn"><i class="bi bi-bag-plus"></i> Cart</a>
                     </span>
+                    </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
 
 
     </div>
 </div>
+
+<div class="container">
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+
+            {% if products.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ products.previous_page_number }}"><i class="bi bi-arrow-left-circle"></i> Previous page</a>
+                </li>
+            {% endif %}
+
+
+            <li class="page-item"><a class="page-link disabled" href="#"> Page {{ products.number }}
+                of {{ products.paginator.num_pages }}</a></li>
+
+
+            {% if products.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ products.next_page_number }}"> Next page <i class="bi bi-arrow-right-circle"></i></a>
+                </li>
+            {% endif %}
+
+        </ul>
+    </nav>
+</div>
+
 
 <div class="main"></div>
