--- a/template/component/message.html
+++ b/template/component/message.html
@@ -1,5 +1,5 @@
 <div class="container " style="z-index: 9">
-    <div class="row mt-3">
+    <div class="row ">
         <div class="col-md-10"></div>
         <div class="col-md-2 " style="text-align: right">
             {%for message in messages%}
