--- a/template/details.html
+++ b/template/details.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-<div class="container mt-2">
+<div class="container my-2">
     <div class="card">
         <div class="card-body">
 
