change in template

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -6,8 +6,8 @@
 }
 
 .footer-wrapper {
-    background-color: #f67c01;
-    color: black;
+    background-color: rgb(6, 9, 66);
+    color: #ffffff;
 }
 
 .down-footer {
